// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Overview should display "handmade" text if item is handmade 1`] = `
<div
  className="mainItem"
  id="overview"
>
  <h2
    className="overviewTitle"
    key=".0"
  >
    Overview
  </h2>
  <ul
    key=".1"
  >
    <li
      className="overviewList"
      key=".0"
    >
      Handmade supply
    </li>
    <li
      className="overviewList"
      key=".1"
    >
      Materials: 
      flesh, blood
    </li>
    <li
      className="overviewList"
      key=".2"
    >
      Vintage item from the 
      '
      90s
    </li>
    <li
      className="overviewList"
      key=".3"
    >
      Feedback:
       
      <a
        className="feedbackLink"
        href="#"
        key=".2"
      >
        100
         reviews
      </a>
    </li>
    <li
      className="overviewList"
      key=".4"
    >
      Favorited by:
       
      <a
        className="feedbackLink"
        href="#"
        key=".2"
      >
        200
         people
      </a>
    </li>
  </ul>
  <div
    key=".2"
  >
    <FontAwesomeIcon$1
      border={false}
      className=""
      fixedWidth={false}
      flip={null}
      icon={
        Object {
          "icon": Array [
            512,
            512,
            Array [],
            "f06b",
            "M32 448c0 17.7 14.3 32 32 32h160V320H32v128zm448-288h-42.1c6.2-12.1 10.1-25.5 10.1-40 0-48.5-39.5-88-88-88-41.6 0-68.5 21.3-103 68.3-34.5-47-61.4-68.3-103-68.3-48.5 0-88 39.5-88 88 0 14.5 3.8 27.9 10.1 40H32c-17.7 0-32 14.3-32 32v80c0 8.8 7.2 16 16 16h480c8.8 0 16-7.2 16-16v-80c0-17.7-14.3-32-32-32zm-326.1 0c-22.1 0-40-17.9-40-40s17.9-40 40-40c19.9 0 34.6 3.3 86.1 80h-86.1zm206.1 0h-86.1c51.4-76.5 65.7-80 86.1-80 22.1 0 40 17.9 40 40s-17.9 40-40 40zm-72 320h160c17.7 0 32-14.3 32-32V320H288v160z",
          ],
          "iconName": "gift",
          "prefix": "fas",
        }
      }
      key=".0"
      listItem={false}
      mask={null}
      name=""
      pull={null}
      pulse={false}
      rotation={null}
      size={null}
      spin={false}
      symbol={false}
      transform={null}
    />
     
     
    <span
      className="overviewList"
      key=".3"
    >
      This shop accepts Mini Market gift cards
    </span>
  </div>
</div>
`;

exports[`Overview should not display "handmade" text if item is not handmade 1`] = `
<div
  className="mainItem"
  id="overview"
>
  <h2
    className="overviewTitle"
    key=".0"
  >
    Overview
  </h2>
  <ul
    key=".1"
  >
    <li
      className="overviewList"
      key=".1"
    >
      Materials: 
      flesh, blood
    </li>
    <li
      className="overviewList"
      key=".2"
    >
      Vintage item from the 
      '
      90s
    </li>
    <li
      className="overviewList"
      key=".3"
    >
      Feedback:
       
      <a
        className="feedbackLink"
        href="#"
        key=".2"
      >
        100
         reviews
      </a>
    </li>
    <li
      className="overviewList"
      key=".4"
    >
      Favorited by:
       
      <a
        className="feedbackLink"
        href="#"
        key=".2"
      >
        200
         people
      </a>
    </li>
  </ul>
  <div
    key=".2"
  >
    <FontAwesomeIcon$1
      border={false}
      className=""
      fixedWidth={false}
      flip={null}
      icon={
        Object {
          "icon": Array [
            512,
            512,
            Array [],
            "f06b",
            "M32 448c0 17.7 14.3 32 32 32h160V320H32v128zm448-288h-42.1c6.2-12.1 10.1-25.5 10.1-40 0-48.5-39.5-88-88-88-41.6 0-68.5 21.3-103 68.3-34.5-47-61.4-68.3-103-68.3-48.5 0-88 39.5-88 88 0 14.5 3.8 27.9 10.1 40H32c-17.7 0-32 14.3-32 32v80c0 8.8 7.2 16 16 16h480c8.8 0 16-7.2 16-16v-80c0-17.7-14.3-32-32-32zm-326.1 0c-22.1 0-40-17.9-40-40s17.9-40 40-40c19.9 0 34.6 3.3 86.1 80h-86.1zm206.1 0h-86.1c51.4-76.5 65.7-80 86.1-80 22.1 0 40 17.9 40 40s-17.9 40-40 40zm-72 320h160c17.7 0 32-14.3 32-32V320H288v160z",
          ],
          "iconName": "gift",
          "prefix": "fas",
        }
      }
      key=".0"
      listItem={false}
      mask={null}
      name=""
      pull={null}
      pulse={false}
      rotation={null}
      size={null}
      spin={false}
      symbol={false}
      transform={null}
    />
     
     
    <span
      className="overviewList"
      key=".3"
    >
      This shop accepts Mini Market gift cards
    </span>
  </div>
</div>
`;
